--- a/src/Forecast.css
+++ b/src/Forecast.css
@@ -1,9 +1,12 @@
 .Forecast {
-  text-align: center;
-  font-size: 12px;
+	text-align: center;
+	font-size: 12px;
+	padding: 12px;
+	margin-top: 5px;
+	color: #48484a;
 }
 
 .Forecast-temp-min {
-  opacity: 0.6;
-  /* margin-left: 5px; */
+	opacity: 0.6;
+	/* margin-left: 5px; */
 }
