Small fixes/experimentations

--- a/src/Search.css
+++ b/src/Search.css
@@ -3,4 +3,6 @@
 	border-radius: 4px;
 	padding: 16px;
 	margin: 20px auto 0px auto;
+	/* background: rgb(168, 228, 160, 0.15); */
+	/* background-color: rgb(28, 172, 120, 0.15); */
 }
